--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,12 +1,12 @@
 body {
-background-color: black;
-text-align: center;
+	background-color: black;
+	font-family: Verdana;
+	text-align: center;
 }
 
 
 h1 {
 	font-weight: normal;
-	font-family: Verdana;
 	font-size: 50px;
 	color: white;
 }
@@ -16,3 +16,16 @@ h1 {
 	color: aquamarine;
 }
 
+h2 {
+	font-weight: 300;
+	font-size: 42px;
+}
+
+p {
+	font-size: 21px;
+	color: gray;
+}
+
+.trademark {
+	text-align: right;
+}
